style contact info

--- a/index.html
+++ b/index.html
@@ -146,12 +146,10 @@
           </section>
 
         <!-- "reach out" section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section id = "reach-out" class = "contact">
+            <h2 class = "section-title secondary-border">Reach Out</h2>
             <div class = "contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3454.071789361928!2d-97.85211498482967!3d30.034798225983117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865b5394aefa7eaf%3A0x5d08595ead13dfab!2sThe%20Home%20Depot!5e0!3m2!1sen!2sus!4v1620869901284!5m2!1sen!2sus"
-                    width="600"
-                    height="450"
                     style="border:0;"
                     allowfullscreen=""
                     loading="lazy">
